# nino

./: README.md  meson.build
data/: com.github.torikulhabib.nino.appdata.xml.in  com.github.torikulhabib.nino.desktop.in  com.github.torikulhabib.nino.desktop.in.in  com.github.torikulhabib.nino.gresource.xml  com.github.torikulhabib.nino.gschema.xml  meson.build
data/css/: color_buttons.css  colors.css  main.css  style_blue.css  style_coco.css  style_dark.css  style_dark_semitrans.css  style_dark_transparent.css  style_gradient_blue_green.css  style_gradient_orange_yellow.css  style_gradient_pride.css  style_gradient_purple_red.css  style_gradient_rainbow.css  style_gradient_red_pink.css  style_green.css  style_light_semitrans.css  style_light_transparent.css  style_orange.css  style_pink.css  style_purple.css  style_red.css  style_teal.css  style_white.css  style_yellow.css
debian/: changelog  control  copyright  rules
po/: POTFILES.in  com.github.torikulhabib.nino.pot  fr.po  id.po  meson.build  nl.po  nl_NL.po  pt.po
po/extra/: POTFILES  extra.pot  fr.po  id.po  nl.po  pt.po
snap/: snapcraft.yaml
src/: Application.vala  MainWindow.vala  MiniWindow.vala  StringPot.vala  Window.vala  meson.build
src/Configs/: Constants.vala  Settings.vala  SettingsDconf.vala
src/Enums/: Color.vala
src/Services/: Net.vala  Utils.vala
src/Widgets/: Preferences.vala
