sources = files(
    'Application.vala',
    'MainWindow.vala',
    'MiniWindow.vala',
    'Window.vala',
    'StringPot.vala',
    'Services/Net.vala',
    'Services/Utils.vala',
    'Widgets/Preferences.vala',
    'Enums/Color.vala',
    'Configs/Constants.vala',
    'Configs/Settings.vala',
    'Configs/SettingsDconf.vala'
)
